--- a/docs/style/component/genesis-nft.less
+++ b/docs/style/component/genesis-nft.less
@@ -73,11 +73,15 @@
         >.button-wrap {
             display: flex;
 
-            >.klay-button {
+            >a {
+                display         : flex;
+                align-items     : center;
                 cursor          : pointer;
-                padding         : 8px 12px 9px;
+                text-align      : center;
+                padding         : 0px 8px;
+                min-height      : 20px;
                 font-weight     : 700;
-                font-size       : 0.75rem;
+                font-size       : 12px;
                 border-radius   : 4px;
                 border-color    : #e0d8c8;
                 border          : solid 1px;
