feat: stable dao buy

--- a/docs/style/main.less
+++ b/docs/style/main.less
@@ -32,3 +32,4 @@ body {
 @import "view/genesis.less";
 @import "view/supernova.less";
 @import "view/stable-dao.less";
+@import "view/buy-stable-dao.less";
