--- a/docs/bundle.css
+++ b/docs/bundle.css
@@ -1404,6 +1404,25 @@ body {
     padding: 16px;
   }
 }
+.stable-dao-view > .warning-container {
+  background-color: rgba(0, 68, 90, 0.7);
+  border-radius: 8px;
+  padding: 8px 16px;
+  margin: 8px 0px;
+}
+.stable-dao-view > .warning-container > p {
+  font-weight: 300;
+  margin: 20px 0px;
+}
+.stable-dao-view > .warning-container > a {
+  display: block;
+  font-size: 18px;
+  font-weight: 300;
+  margin-bottom: 8px;
+}
+.stable-dao-view > .warning-container > a:hover {
+  font-weight: 400;
+}
 .stable-dao-view > section > header > .title-container > h2 {
   color: #00445a;
   font-size: 32px;
@@ -1477,6 +1496,191 @@ body {
 }
 @media only screen and (max-width: 719px) {
   .stable-dao-view > section > .portfolio-container {
+    grid-template-columns: repeat(1, 1fr);
+  }
+}
+.buy-stable-dao-view {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  align-items: center;
+  margin-top: 64px;
+  border-radius: 1rem;
+  padding: 32px;
+  padding-bottom: 60px;
+  max-width: 768px;
+  margin: auto;
+  justify-content: center;
+  background-color: rgba(0, 0, 0, 0.8);
+  border-radius: 8px;
+}
+.buy-stable-dao-view > h1 {
+  font-weight: 700;
+  font-size: 32px;
+  margin-bottom: 64px;
+}
+.buy-stable-dao-view > img {
+  width: 20%;
+  margin: 32px;
+}
+@media only screen and (max-width: 719px) {
+  .buy-stable-dao-view > img {
+    width: 80%;
+  }
+}
+.buy-stable-dao-view > .selector-container > p {
+  font-size: 16px;
+  margin-top: 16px;
+  font-weight: 300;
+}
+.buy-stable-dao-view > .selector-container > .select {
+  margin-top: 16px;
+  display: flex;
+}
+@media only screen and (max-width: 719px) {
+  .buy-stable-dao-view > .selector-container > .select {
+    flex-direction: column;
+  }
+}
+.buy-stable-dao-view > .selector-container > .select > a.disable {
+  padding: 12px;
+  color: #676767;
+  font-weight: 400;
+}
+.buy-stable-dao-view > .selector-container > .select > a.disable:hover {
+  border-bottom: solid 3px #00445a;
+}
+.buy-stable-dao-view > .selector-container > .select > a {
+  width: 100%;
+  padding: 12px;
+  font-weight: 700;
+  color: #00445a;
+}
+.buy-stable-dao-view > .selector-container > .select > a:hover {
+  border-bottom: solid 3px #00445a;
+}
+.buy-stable-dao-view > .selector-container > .select > hr {
+  width: 1px;
+  height: 24px;
+  background: #676767;
+  border: none;
+  margin: 8px 50px;
+}
+@media only screen and (max-width: 719px) {
+  .buy-stable-dao-view > .selector-container > .select > hr {
+    width: 100%;
+    height: 1px;
+    margin: 0px;
+  }
+}
+.buy-stable-dao-view > .input-container {
+  display: flex;
+  flex-direction: column;
+  margin-top: 32px;
+  width: 100%;
+}
+.buy-stable-dao-view > .input-container > p {
+  margin-bottom: 16px;
+  font-size: 16px;
+  font-weight: 300;
+}
+.buy-stable-dao-view > .input-container > input {
+  color: white;
+  border: 1px solid #1d1d20;
+  border-radius: 4px;
+  padding: 12px;
+  background-color: #101010;
+}
+.buy-stable-dao-view > .input-container > input:hover {
+  border-color: #00445a;
+}
+.buy-stable-dao-view > .input-container > input:focus {
+  border-color: #00445a;
+}
+.buy-stable-dao-view > .input-container > .button-container {
+  display: flex;
+  justify-content: space-around;
+  gap: 20px;
+}
+.buy-stable-dao-view > .input-container > .button-container > a {
+  width: 50%;
+  display: block;
+  color: #00445a;
+  margin-top: 16px;
+  padding: 12px 24px;
+  font-size: 14px;
+  text-decoration: none;
+  color: white;
+  background-color: rgba(0, 68, 90, 0.8);
+  border-radius: 4px;
+}
+.buy-stable-dao-view > .input-container > .button-container > a:hover {
+  background-color: rgba(0, 68, 90, 0.9);
+}
+.buy-stable-dao-view > .input-container > .button-container > a:active {
+  background-color: #00445a;
+}
+.buy-stable-dao-view > .input-container > .button-container > .disabled {
+  background: #C8C8C8;
+  color: #E0E0E0;
+}
+.buy-stable-dao-view > .input-container > .button-container > .disabled:hover {
+  background: #C8C8C8;
+}
+.buy-stable-dao-view > .input-container > .button-container > .disabled:active {
+  background: #C8C8C8;
+}
+.buy-stable-dao-view > .input-container > .usdt {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  margin-top: 16px;
+  padding: 12px 24px;
+  font-size: 14px;
+  text-decoration: none;
+  background-color: transparent;
+  border: 1px solid #00445a;
+  color: white;
+  border-radius: 4px;
+  justify-content: center;
+  align-items: center;
+}
+.buy-stable-dao-view > .input-container > .usdt:hover {
+  background-color: rgba(0, 68, 90, 0.2);
+}
+.buy-stable-dao-view > .input-container > .usdt:active {
+  background-color: rgba(0, 68, 90, 0.5);
+}
+.buy-stable-dao-view > .warning-container {
+  background-color: rgba(0, 68, 90, 0.7);
+  border-radius: 8px;
+  padding: 8px 16px;
+  margin-top: 32px;
+}
+.buy-stable-dao-view > .warning-container > p {
+  font-weight: 300;
+  margin: 20px 0px;
+}
+.buy-stable-dao-view > .nft-container {
+  display: flex;
+  flex-direction: column;
+  text-align: left;
+  width: 100%;
+  margin-top: 64px;
+}
+.buy-stable-dao-view > .nft-container > h2 {
+  font-weight: 700;
+  font-size: 24px;
+  margin-bottom: 16px;
+}
+.buy-stable-dao-view > .nft-container > section {
+  margin-top: 16px;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 20px;
+}
+@media only screen and (max-width: 719px) {
+  .buy-stable-dao-view > .nft-container > section {
     grid-template-columns: repeat(1, 1fr);
   }
 }
