--- a/docs/style/view/stable-dao.less
+++ b/docs/style/view/stable-dao.less
@@ -13,6 +13,29 @@
         padding: 16px;
     }
 
+    >.warning-container {
+        background-color: rgba(0, 68, 90, 0.7);
+        border-radius   : 8px;
+        padding         : 8px 16px;
+        margin          : 8px 0px;
+
+        >p {
+            font-weight: 300;
+            margin     : 20px 0px;
+        }
+
+        >a {
+            display      : block;
+            font-size    : 18px;
+            font-weight  : 300;
+            margin-bottom: 8px;
+
+            &:hover {
+                font-weight: 400;
+            }
+        }
+    }
+
     >section {
         >header {
             >.title-container {
