--- a/docs/style/component/shared/menu/pc-menu.less
+++ b/docs/style/component/shared/menu/pc-menu.less
@@ -3,14 +3,12 @@
         display: flex;
 
         >li {
-            display    : flex;
-            float      : left;
-            font-weight: 500;
+            position: relative;
 
             >a {
                 cursor         : pointer;
                 padding        : 8px 12px 8px 12px;
-                font-size      : 0.875rem;
+                font-size      : 14px;
                 text-decoration: none;
                 color          : white;
 
@@ -36,17 +34,18 @@
 
                 >li {
                     >a {
+                        font-size : 14px;
                         display   : block;
                         text-align: center;
                         padding   : 10px;
+                    }
 
-                        &:hover {
-                            color: rgba(177, 156, 118, 1);
-                        }
+                    &:hover {
+                        background-color: rgba(177, 156, 118, 1);
+                    }
 
-                        &:active {
-                            color: rgba(177, 156, 118, 1);
-                        }
+                    &:active {
+                        color: rgba(177, 156, 118, 1);
                     }
                 }
             }
