--- a/docs/bundle.css
+++ b/docs/bundle.css
@@ -971,7 +971,6 @@ body {
 .layout {
   width: 100%;
   background-color: black;
-  background: url("/images/shared/img/img-bg.png");
 }
 .layout > header {
   display: flex;
@@ -1168,6 +1167,44 @@ body {
 }
 .home-view > section > .card:active {
   background-color: #000000;
+}
+.check-holder-view {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  flex-direction: column;
+}
+.check-holder-view > header > img {
+  width: 256px;
+  height: 256px;
+}
+.check-holder-view > header > h1 {
+  font-family: 'Trajan Pro Bold';
+  font-size: 32px;
+  margin-bottom: 16px;
+  color: #b19c76;
+}
+.check-holder-view > header > h2 {
+  font-size: 16px;
+  font-family: 'Trajan Pro Regular';
+}
+.check-holder-view > article > a {
+  font-family: 'Trajan Pro Regular';
+  display: block;
+  text-decoration: none;
+  color: white;
+  font-size: 14px;
+  padding: 16px 84px;
+  border-radius: 4px;
+  margin-top: 32px;
+  background-color: #b19c76;
+}
+.check-holder-view > article > a:hover {
+  background-color: rgba(177, 156, 118, 0.9);
+}
+.check-holder-view > article > a:active {
+  background-color: rgba(177, 156, 118, 0.8);
 }
 .home-view {
   display: flex;
