--- a/docs/style/main.less
+++ b/docs/style/main.less
@@ -29,6 +29,7 @@ body {
 // views
 @import "view/layout.less";
 @import "view/home.less";
+@import "view/checkholder.less";
 @import "view/genesis.less";
 @import "view/supernova.less";
 @import "view/stable-dao.less";
