--- a/docs/style/main.less
+++ b/docs/style/main.less
@@ -30,7 +30,15 @@ body {
 @import "view/layout.less";
 @import "view/home.less";
 @import "view/checkholder.less";
+
+/** Genesis */
+@import "view/landing-genesis.less";
 @import "view/genesis.less";
+
+/** Supernova */
+@import "view/landing-supernova.less";
 @import "view/supernova.less";
+
+/** Stable DAO */
 @import "view/stable-dao.less";
 @import "view/buy-stable-dao.less";
