--- a/docs/style/main.less
+++ b/docs/style/main.less
@@ -15,6 +15,7 @@ body {
 @import "component/shared/connectwalletpopup.less";
 @import "component/shared/klipqrpopup.less";
 @import "component/shared/popup.less";
+@import "component/shared/collapsible-item.less";
 @import "component/shared/menu/pc-menu.less";
 @import "component/shared/menu/mobile-menu.less";
 @import "component/shared/menu/user-menu.less";
@@ -40,5 +41,6 @@ body {
 @import "view/supernova.less";
 
 /** Stable DAO */
+@import "view/landing-stable-dao.less";
 @import "view/stable-dao.less";
 @import "view/buy-stable-dao.less";
