--- a/docs/style/main.less
+++ b/docs/style/main.less
@@ -31,6 +31,8 @@ body {
 @import "view/layout.less";
 @import "view/home.less";
 @import "view/checkholder.less";
+@import "view/team.less";
+@import "view/partners.less";
 
 /** Genesis */
 @import "view/landing-genesis.less";
