--- a/docs/style/view/partners.less
+++ b/docs/style/view/partners.less
@@ -6,17 +6,18 @@
         justify-content: center;
         font-family    : trajan-pro-3, serif;
         font-weight    : 700;
-        font-size      : 2.5rem;
-        margin-top     : 12rem;
+        font-size      : 40px;
         color          : #b19c76;
+        margin-top     : 64px;
     }
 
     >section {
         margin-top: 4rem;
 
         >a {
-            display   : block;
-            margin-top: 32px;
+            display        : flex;
+            justify-content: center;
+            margin-top     : 32px;
 
             >img {
                 width  : 100%;
@@ -31,6 +32,20 @@
             >.electrikFinance {
                 width  : 320px;
                 height : 97px;
+                padding: 0px;
+                margin : 16px 0px;
+            }
+
+            >.layerlab {
+                width  : 256px;
+                height : 197px;
+                padding: 0px;
+                margin : 16px 0px;
+            }
+
+            >.dncMedia {
+                width  : 312px;
+                height : 161px;
                 padding: 0px;
                 margin : 16px 0px;
             }
