--- a/docs/style/view/team.less
+++ b/docs/style/view/team.less
@@ -6,10 +6,13 @@
         justify-content: center;
 
         >h2 {
-            font-family: trajan-pro-3, serif;
-            font-size  : 2.5rem;
-            margin-top : 12rem;
-            color      : #b19c76;
+            display        : flex;
+            justify-content: center;
+            font-family    : trajan-pro-3, serif;
+            font-weight    : 700;
+            font-size      : 40px;
+            color          : #b19c76;
+            margin-top     : 64px;
         }
     }
 
