--- a/docs/style/view/partners.less
+++ b/docs/style/view/partners.less
@@ -49,6 +49,13 @@
                 padding: 0px;
                 margin : 16px 0px;
             }
+
+            >.spoon {
+                width  : 188px;
+                height : 144px;
+                padding: 0px;
+                margin : 16px 0px;
+            }
         }
     }
 }
