--- a/docs/style/main.less
+++ b/docs/style/main.less
@@ -46,3 +46,6 @@ body {
 @import "view/landing-stable-dao.less";
 @import "view/stable-dao.less";
 @import "view/buy-stable-dao.less";
+
+/** Dividend */
+@import "view/landing-dividend.less";
