--- a/docs/style/view/home.less
+++ b/docs/style/view/home.less
@@ -1,4 +1,12 @@
 .home-view {
+    display         : flex;
+    flex-direction  : column;
+    justify-content : center;
+    text-align      : center;
+    background-color: rgba(0, 0, 0, 0.2);
+    border-radius   : 4px;
+    padding         : 32px;
+
     >header {
         >img {
             width : 256px;
