feat: supernova event

--- a/docs/style/main.less
+++ b/docs/style/main.less
@@ -26,6 +26,7 @@ body {
 @import "component/stable-nft.less";
 @import "component/transfer-popup.less";
 @import "component/portfolio-item.less";
+@import "component/supernova-event-item.less";
 
 // views
 @import "view/layout.less";
@@ -41,6 +42,7 @@ body {
 /** Supernova */
 @import "view/landing-supernova.less";
 @import "view/supernova.less";
+@import "view/supernova-event.less";
 
 /** Stable DAO */
 @import "view/landing-stable-dao.less";
