--- a/docs/style/view/supernova.less
+++ b/docs/style/view/supernova.less
@@ -136,6 +136,29 @@
         }
     }
 
+    >.warning-container {
+        background-color: rgba(153, 0, 19, 0.7);
+        border-radius   : 8px;
+        padding         : 8px 16px;
+        margin          : 8px 0px;
+
+        >p {
+            font-weight: 300;
+            margin     : 20px 0px;
+        }
+
+        >a {
+            display      : block;
+            font-size    : 14px;
+            font-weight  : 400;
+            margin-bottom: 8px;
+
+            &:hover {
+                font-weight: 500;
+            }
+        }
+    }
+
     >.nft-container {
         margin-top           : 32px;
         display              : grid;
