--- a/docs/bundle.css
+++ b/docs/bundle.css
@@ -1008,6 +1008,47 @@ body {
 .portfolio-item > button:active {
   background-color: #00445a;
 }
+.supernova-event-item > section {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: #101010;
+  max-width: 512px;
+  padding: 20px;
+  border-radius: 4px;
+}
+@media only screen and (max-width: 719px) {
+  .supernova-event-item > section {
+    width: 90%;
+  }
+}
+.supernova-event-item > section > img {
+  height: 100%;
+  max-height: 256px;
+  border-radius: 4px;
+}
+@media only screen and (max-width: 719px) {
+  .supernova-event-item > section > img {
+    width: 100%;
+  }
+}
+.supernova-event-item > section > .content > h6 {
+  font-size: 24px;
+  font-weight: bold;
+  margin-top: 16px;
+  color: #990013;
+}
+.supernova-event-item > section > .content > p {
+  font-size: 14px;
+  font-weight: 400;
+  margin-top: 8px;
+  color: #e0d8c8;
+}
+.supernova-event-item > section > .content > .date {
+  font-size: 14px;
+  font-weight: 300;
+  margin-top: 8px;
+}
 .layout {
   width: 100%;
   background-color: black;
@@ -1963,6 +2004,25 @@ body {
   background-color: #e0d8c8;
   color: white;
 }
+.supernova-view > .warning-container {
+  background-color: rgba(153, 0, 19, 0.7);
+  border-radius: 8px;
+  padding: 8px 16px;
+  margin: 8px 0px;
+}
+.supernova-view > .warning-container > p {
+  font-weight: 300;
+  margin: 20px 0px;
+}
+.supernova-view > .warning-container > a {
+  display: block;
+  font-size: 14px;
+  font-weight: 400;
+  margin-bottom: 8px;
+}
+.supernova-view > .warning-container > a:hover {
+  font-weight: 500;
+}
 .supernova-view > .nft-container {
   margin-top: 32px;
   display: grid;
@@ -1973,6 +2033,38 @@ body {
   .supernova-view > .nft-container {
     grid-template-columns: repeat(1, 1fr);
   }
+}
+.supernova-event-view {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
+  background-color: rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
+  padding: 32px;
+}
+@media only screen and (max-width: 719px) {
+  .supernova-event-view {
+    margin: 64px 8px;
+    padding: 16px;
+  }
+}
+.supernova-event-view > header > .title-container > h2 {
+  color: #990013;
+  font-size: 32px;
+  font-weight: 700;
+}
+.supernova-event-view > header > .title-container > p {
+  font-size: 12px;
+  padding-top: 8px;
+  color: #e0d8c8;
+  font-weight: 300;
+}
+.supernova-event-view > .event-list {
+  display: grid;
+  justify-content: center;
+  gap: 64px;
+  margin-top: 64px;
 }
 /** Stable DAO */
 .landing-stable-dao-view {
@@ -2286,12 +2378,12 @@ body {
 }
 .stable-dao-view > .warning-container > a {
   display: block;
-  font-size: 18px;
-  font-weight: 300;
+  font-size: 14px;
+  font-weight: 400;
   margin-bottom: 8px;
 }
 .stable-dao-view > .warning-container > a:hover {
-  font-weight: 400;
+  font-weight: 500;
 }
 .stable-dao-view > section > header > .title-container > h2 {
   color: #00445a;
