feat: supernova event mobile

--- a/docs/style/view/supernova-event.less
+++ b/docs/style/view/supernova-event.less
@@ -32,6 +32,8 @@
     >.event-list {
         display        : grid;
         justify-content: center;
+        align-items    : center;
+        flex-wrap      : wrap;
         gap            : 64px;
         margin-top     : 64px;
     }
