--- a/docs/bundle.css
+++ b/docs/bundle.css
@@ -1008,19 +1008,19 @@ body {
 .portfolio-item > button:active {
   background-color: #00445a;
 }
+.supernova-event-item {
+  display: flex;
+  justify-content: center;
+}
 .supernova-event-item > section {
   display: flex;
   flex-direction: column;
   align-items: center;
   background-color: #101010;
+  width: 100%;
   max-width: 512px;
   padding: 20px;
   border-radius: 4px;
-}
-@media only screen and (max-width: 719px) {
-  .supernova-event-item > section {
-    width: 90%;
-  }
 }
 .supernova-event-item > section > img {
   height: 100%;
@@ -2063,6 +2063,8 @@ body {
 .supernova-event-view > .event-list {
   display: grid;
   justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
   gap: 64px;
   margin-top: 64px;
 }
