--- a/docs/style/component/supernova-event-item.less
+++ b/docs/style/component/supernova-event-item.less
@@ -1,16 +1,16 @@
 .supernova-event-item {
+    display        : flex;
+    justify-content: center;
+
     >section {
         display         : flex;
         flex-direction  : column;
         align-items     : center;
         background-color: rgba(16, 16, 16, 1);
+        width           : 100%;
         max-width       : 512px;
         padding         : 20px;
         border-radius   : 4px;
-
-        @media @phone {
-            width: 90%;
-        }
 
         >img {
             height       : 100%;
